--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-<title>Yooooooooo</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-<h1>Yee Yaaaaaaa ツツツツツツツツツツツ</h1>
-<h2>Yoooooooo</h2>
-<p>My first paragraph.</p>
-<p>Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!Bruh!!!!!!</p>
-<h1>Botttttttttttt</h1>
-<h6>lol,ToT</h6>
-<p>ggggggsssssssss</p>
+
+    <h1>Week 4 - Recap</h1>
+
+    <p>I am learnning HTML tags</p>
+
+    <p><button>I am. a button</button></p>
+
+    <div class="image-box">
+
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Sheba1.JPG">
+        <p class="caption">I am a cool cat, I love my life</p>
+
+    </div>
+
+<p>
+
+    <a class="button" href="page1.html">Lets go to Page 1</a>
+</p>
 
 
 </body>
 </html>
+</hyml>
